crates/cli/src/config/snapshots/glory_cli__config__tests__project.snap
---
source: crates/cli/src/config/tests.rs
assertion_line: 24
expression: conf
---
Config {
    projects: [
        Project {
            name: "example",
            lib: LibPackage {
                name: "example",
                rel_dir: ".",
                wasm_file: SourcedSiteFile {
                    source: "target/front/wasm32-unknown-unknown/debug/example.wasm",
                    dest: "target/site/pkg/example.wasm",
                    site: "pkg/example.wasm",
                },
                js_file: SiteFile {
                    dest: "target/site/pkg/example.js",
                    site: "pkg/example.js",
                },
                features: [
                    "web-csr",
                    "web-ssr",
                ],
                default_features: false,
                output_name: "example",
                src_paths: "src",
                profile: Debug,
                ..
            },
            bin: BinPackage {
                name: "example",
                rel_dir: ".",
                exe_file: "target/server/debug/example",
                target: "example",
                features: [
                    "web-ssr",
                ],
                default_features: false,
                src_paths: "src",
                profile: Debug,
                ..
            },
            style: StyleConfig {
                file: None,
                browser_query: "defaults",
                tailwind: None,
                site_file: SiteFile {
                    dest: "target/site/pkg/example.css",
                    site: "pkg/example.css",
                },
            },
            watch: true,
            release: false,
            hot_reload: false,
            site: Site {
                addr: 127.0.0.1:8000,
                reload: 127.0.0.1:3001,
                root_dir: "target\\site",
                pkg_dir: "pkg",
                file_reg: {},
                ext_file_reg: {},
            },
            end2end: None,
            assets: None,
            target: Web,
            ..
        },
    ],
    cli: Opts {
        release: false,
        hot_reload: false,
        project: None,
        features: [],
        lib_features: [],
        bin_features: [],
        verbose: 0,
        target: Web,
    },
    watch: true,
    ..
}
